<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DeletarCliente"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:layout_width="@dimen/arrow_size"
            android:layout_height="wrap_content"
            android:background="@drawable/car_ui_icon_arrow_back"
            android:onClick="voltar"/>



    </LinearLayout>


    <LinearLayout
        android:autofillHints="@string/insira_nome"
        android:layout_marginTop="@dimen/margin_bottom"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">



        <EditText
            android:layout_margin="@dimen/margin_gif"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/insira_nome"
            android:id="@+id/txtNameDelete"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center">


            <Button

                android:backgroundTint="@color/rosa_medio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/deletartudo"
                android:onClick="deleteAll"/>

             <Button
                android:layout_marginStart="@dimen/margin_bottom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/deletar"
                android:onClick="delete"/>



    </LinearLayout>

    </LinearLayout>

</RelativeLayout>